@@ -1,16 +1,15 @@
 package ru.javaops.masterjava.webapp;
 
-import com.google.common.collect.ImmutableMap;
 import org.thymeleaf.context.WebContext;
 import ru.javaops.masterjava.persist.DBIProvider;
 import ru.javaops.masterjava.persist.dao.UserDao;
 
-import javax.servlet.ServletException;
 import javax.servlet.annotation.WebServlet;
 import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
+import java.util.Map;
 
 import static ru.javaops.masterjava.common.web.ThymeleafListener.engine;
 
@@ -19,9 +18,9 @@ public class UsersServlet extends HttpServlet {
     private UserDao userDao = DBIProvider.getDao(UserDao.class);
 
     @Override
-    protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+    protected void doGet(HttpServletRequest request, HttpServletResponse response) throws IOException {
         final var webContext = new WebContext(request, response, request.getServletContext(), request.getLocale(),
-                ImmutableMap.of("users", userDao.getWithLimit(20)));
+                Map.of("users", userDao.getWithLimit(20)));
         engine.process("users", webContext, response.getWriter());
     }
 }
